@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-26T16:17:36Z",
+  "timestamp" : "2022-10-27T01:10:21Z",
   "count_outdated" : 129,
   "uniques_outdated" : 44,
-  "count" : 136,
-  "uniques" : 48,
+  "count" : 137,
+  "uniques" : 49,
   "views" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
