@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 4,
+  "count": 8,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-10-18T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
