@@ -1,3 +1,11 @@
+2022-10-27T01:10:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333735798 # 558
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 129 / 48 136
+* notice: next accum: outdated-unq outdated-all / unq all: 44 129 / 49 137
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-10-26T16:17:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330728761 # 557
 * notice: last 14d: unq all: 4 7
